[package]
name = "riot-launcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = "0.5.2", package = "libadwaita", features = ["v1_2"] }
error-chain = "0.12.4"
gtk = { version = "0.7.1", package = "gtk4", features = ["v4_10"] }
reqwest = { version = "0.11.18", features = ["blocking"] }

[build-dependencies]
glib-build-tools = "0.18.0"
